--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ joblib==1.5.1
 lazy_loader==0.4
 natsort==8.4.0
 networkx==3.5
-numpy==2.3.1
+numpy==2.2.6
+opencv-python==4.12.0.88
 packaging==25.0
 pillow==11.3.0
 praw==7.8.1
